--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+env:
+  NODE_VERSION: '22.12.0'
+
 jobs:
   lint:
     name: Lint
@@ -19,7 +22,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '23.11.0'
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Cache node modules
         uses: actions/cache@v3
@@ -48,7 +51,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.12.0'
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Cache node modules
         uses: actions/cache@v3
@@ -74,7 +77,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.12.0'
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Cache node modules
         uses: actions/cache@v3
@@ -108,7 +111,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.12.0'
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Cache node modules
         uses: actions/cache@v3
